// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSize gets the initial size 1`] = `
<div
  data-testid="size"
>
  {
  "x": 0,
  "y": 0,
  "top": 0,
  "right": 120,
  "bottom": 120,
  "left": 0,
  "width": 120,
  "height": 120,
  "vw": 0.12,
  "vh": 0.16
}
</div>
`;

exports[`useSize passes the initial size to a handler 1`] = `
Array [
  Array [
    Object {
      "bottom": 120,
      "height": 120,
      "left": 0,
      "right": 120,
      "top": 0,
      "vh": 0.16,
      "vw": 0.12,
      "width": 120,
      "x": 0,
      "y": 0,
    },
  ],
]
`;

exports[`useSize uses an existing ref 1`] = `
<div
  data-testid="size"
>
  {
  "x": 0,
  "y": 0,
  "top": 0,
  "right": 120,
  "bottom": 120,
  "left": 0,
  "width": 120,
  "height": 120,
  "vw": 0.12,
  "vh": 0.16
}
</div>
`;

exports[`useSize uses an existing ref and a handler 1`] = `
Array [
  Array [
    Object {
      "bottom": 120,
      "height": 120,
      "left": 0,
      "right": 120,
      "top": 0,
      "vh": 0.16,
      "vw": 0.12,
      "width": 120,
      "x": 0,
      "y": 0,
    },
  ],
]
`;
